Refactored Quiz, Question and Answer entities to have more integral relationship