@@ -1,22 +1,23 @@
 package com.example.quiz.dto.response;
 
 import com.example.quiz.entities.Question;
-import lombok.Data;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Data
-public class QuestionResponse {
-    private Long id;
-    private String question;
-    private List<AnswerResponse> answers;
-
+public record QuestionResponse(
+        Long id,
+        String question,
+        List<AnswerResponse> answers
+) {
     public QuestionResponse(Question question) {
-        this.id = question.getId();
-        this.question = question.getQuestion();
-        this.answers = question.getAnswers().stream()
-                .map(AnswerResponse::new)
-                .collect(Collectors.toList());
+        this(
+                question.getId(),
+                question.getQuestion(),
+                question.getAnswers()
+                        .stream()
+                        .map(AnswerResponse::new)
+                        .toList()
+        );
     }
 }
+
