@@ -1,117 +1,155 @@
 package com.example.quiz.service;
 
-import com.example.quiz.dto.request.QuestionRequest;
-import com.example.quiz.dto.request.QuizRequest;
+import com.example.quiz.dto.request.question.CreateQuestionRequest;
+import com.example.quiz.dto.request.question.UpdateQuestionRequest;
+import com.example.quiz.dto.request.quiz.CreateQuizRequest;
+import com.example.quiz.dto.request.quiz.CreateQuizWithQuestionsRequest;
+import com.example.quiz.dto.response.QuestionResponse;
 import com.example.quiz.dto.response.QuizResponse;
 import com.example.quiz.entities.Question;
 import com.example.quiz.entities.Quiz;
+import com.example.quiz.exceptions.QuestionNotFoundException;
 import com.example.quiz.exceptions.QuizNotFoundException;
+import com.example.quiz.repositories.QuestionRepository;
 import com.example.quiz.repositories.QuizRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class QuizService {
 
-    @Autowired
     private final QuizRepository quizRepository;
+    private final QuestionRepository questionRepository;
 
-    @Transactional
-    public QuizResponse createQuiz(QuizRequest quizRequest) {
+    /* -------------------------------------------------
+     * Quiz lifecycle
+     * ------------------------------------------------- */
 
-        if (quizRepository.existsByName(quizRequest.name())) {
-            throw new IllegalArgumentException("Quiz " + quizRequest.name() + " already exists");
+    public Quiz createQuiz(CreateQuizRequest request) {
+
+        if (quizRepository.existsByName(request.name())) {
+            throw new IllegalArgumentException(
+                    "Quiz with name '" + request.name() + "' already exists"
+            );
         }
 
-        Quiz quiz = new Quiz(quizRequest.name(), null);
+        Quiz quiz = new Quiz(request.name());
+        return quizRepository.save(quiz);
+    }
 
-        if (quizRequest.questions() != null) {
-            for (QuestionRequest qr : quizRequest.questions()) {
-                Question question = new Question(qr);
-                quiz.addQuestion(question);     // updates count
-                question.setQuiz(quiz);         // sets FK
-            }
+    public Quiz createQuizWithQuestions(CreateQuizWithQuestionsRequest request) {
+
+        if (quizRepository.existsByName(request.name())) {
+            throw new IllegalArgumentException(
+                    "Quiz with name '" + request.name() + "' already exists"
+            );
         }
 
-        quizRepository.save(quiz);
-        return new QuizResponse(quiz);
+        Quiz quiz = new Quiz(request.name());
+
+        request.questions().forEach(qr -> {
+            Question question = new Question(qr);
+            quiz.addQuestion(question); // bidirectional, safe
+        });
+
+        return quizRepository.save(quiz);
     }
 
     public List<QuizResponse> getAllQuizzes() {
-        return quizRepository.findAll().stream()
+        return quizRepository.findAll()
+                .stream()
                 .map(QuizResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public QuizResponse getQuizById(Long id) {
-        Quiz quiz = quizRepository.findById(id)
+        return quizRepository.findById(id)
+                .map(QuizResponse::new)
                 .orElseThrow(() -> new QuizNotFoundException(id));
-        return new QuizResponse(quiz);
     }
 
     public QuizResponse getQuizByName(String name) {
-        Quiz quiz = quizRepository.findByName(name)
+        return quizRepository.findByName(name)
+                .map(QuizResponse::new)
                 .orElseThrow(() ->
-                        new QuizNotFoundException("Could not find quiz with name: " + name)
+                        new QuizNotFoundException("Quiz not found with name: " + name)
                 );
-        return new QuizResponse(quiz);
     }
 
-    @Transactional
-    public QuizResponse editQuiz(QuizRequest quizRequest, Long id) {
+    public QuizResponse updateQuiz(Long id, CreateQuizRequest request) {
 
         Quiz quiz = quizRepository.findById(id)
-                .orElseThrow(() -> new QuizNotFoundException("Quiz not found with id " + id));
+                .orElseThrow(() -> new QuizNotFoundException(id));
 
-        if (!quiz.getName().equals(quizRequest.name())
-                && quizRepository.existsByName(quizRequest.name())) {
-            throw new IllegalArgumentException("Quiz " + quizRequest.name() + " already exists");
+        if (!quiz.getName().equals(request.name())
+                && quizRepository.existsByName(request.name())) {
+            throw new IllegalArgumentException(
+                    "Quiz with name '" + request.name() + "' already exists"
+            );
         }
 
-        quiz.setName(quizRequest.name());
-
-        Map<Long, Question> existingQuestions = quiz.getQuestions().stream()
-                .collect(Collectors.toMap(Question::getId, Function.identity()));
-
-        List<Question> updatedQuestions = new ArrayList<>();
-
-        for (QuestionRequest qr : quizRequest.questions()) {
-            if (qr.id() != null && existingQuestions.containsKey(qr.id())) {
-                // update existing
-                Question q = existingQuestions.get(qr.id());
-                q.setQuestion(qr.question());
-                updatedQuestions.add(q);
-            } else {
-                // new question
-                Question q = new Question(qr);
-                q.setQuiz(quiz);
-                updatedQuestions.add(q);
-            }
-        }
-
-        quiz.getQuestions().clear();
-        quiz.getQuestions().addAll(updatedQuestions);
-        quiz.setNumberOfQuestions(updatedQuestions.size());
-
-        quizRepository.saveAndFlush(quiz);
-
+        quiz.rename(request.name());
         return new QuizResponse(quiz);
     }
 
-
-    @Transactional
     public void deleteQuiz(Long id) {
         Quiz quiz = quizRepository.findById(id)
                 .orElseThrow(() -> new QuizNotFoundException(id));
         quizRepository.delete(quiz);
+    }
+
+    /* -------------------------------------------------
+     * Question lifecycle
+     * ------------------------------------------------- */
+
+    public QuestionResponse addQuestion(
+            Long quizId,
+            CreateQuestionRequest request
+    ) {
+        Quiz quiz = quizRepository.findById(quizId)
+                .orElseThrow(() -> new QuizNotFoundException(quizId));
+
+        Question question = new Question(request);
+        quiz.addQuestion(question);
+
+        return new QuestionResponse(question);
+    }
+
+    public QuestionResponse updateQuestion(
+            Long quizId,
+            Long questionId,
+            UpdateQuestionRequest request
+    ) {
+        Quiz quiz = quizRepository.findById(quizId)
+                .orElseThrow(() -> new QuizNotFoundException(quizId));
+
+        Question question = quiz.getQuestions().stream()
+                .filter(q -> q.getId().equals(questionId))
+                .findFirst()
+                .orElseThrow(() ->
+                        new QuestionNotFoundException(questionId)
+                );
+
+        question.update(request);
+        return new QuestionResponse(question);
+    }
+
+    public void deleteQuestion(Long quizId, Long questionId) {
+        Quiz quiz = quizRepository.findById(quizId)
+                .orElseThrow(() -> new QuizNotFoundException(quizId));
+
+        Question question = quiz.getQuestions().stream()
+                .filter(q -> q.getId().equals(questionId))
+                .findFirst()
+                .orElseThrow(() ->
+                        new QuestionNotFoundException(questionId)
+                );
+
+        quiz.removeQuestion(question);
     }
 }
